projects/nala/reports/login.login/2022.08.30.20.12.54.416/login.login/execution_debug.log
2022-08-30 20:12:54,622 root INFO Test execution started: login.login
2022-08-30 20:12:54,622 root INFO Browser: chrome
2022-08-30 20:12:54,622 root ERROR SyntaxError: '(' was never closed
  File "/home/lautaro/test_directory/projects/nala/tests/login/login.py", line 7
    send_keys(('class', 'MuiInputBase-input MuiOutlinedInput-input', 'Messi')
             ^
SyntaxError: '(' was never closed

